Setup project for first trials

--- a/openlane/user_project_wrapper/config.json
+++ b/openlane/user_project_wrapper/config.json
@@ -1,14 +1,14 @@
 {
     "DESIGN_NAME": "user_project_wrapper",
     "VERILOG_FILES": ["dir::../../verilog/rtl/defines.v", "dir::../../verilog/rtl/user_project_wrapper.v"],
-    "CLOCK_PERIOD": 10,
-    "CLOCK_PORT": "user_clock2",
-    "CLOCK_NET": "mprj.clk",
-    "FP_PDN_MACRO_HOOKS": "mprj vccd1 vssd1 vccd1 vssd1",
+    "CLOCK_PERIOD": 50,
+    "CLOCK_PORT": "io_in[6]",
+    "CLOCK_NET": "cfg_reg0.clk_i temp0.clk adac0.clk_i",
+    "FP_PDN_MACRO_HOOKS": ["cfg_reg0 vccd1 vssd1 vccd1", "temp0 vccd1 vssd1 vccd1", "adac0 vccd1 vssd1 vccd1"],
     "MACRO_PLACEMENT_CFG": "dir::macro.cfg",
-    "VERILOG_FILES_BLACKBOX": ["dir::../../verilog/rtl/defines.v", "dir::../../verilog/rtl/user_proj_example.v"],
-    "EXTRA_LEFS": "dir::../../lef/user_proj_example.lef",
-    "EXTRA_GDS_FILES": "dir::../../gds/user_proj_example.gds",
+    "VERILOG_FILES_BLACKBOX": ["dir::../../verilog/rtl/defines.v", "dir::../../verilog/rtl/config_reg.v", "dir::../../verilog/rtl/audiodac.v", "dir::../../verilog/rtl/tempsense.v"],
+    "EXTRA_LEFS": ["dir::../../lef/config_reg.lef", "dir::../../lef/audiodac.lef", "dir::../../lef/tempsense.lef"],
+    "EXTRA_GDS_FILES": ["dir::../../gds/user_proj_example.gds", "dir::../../gds/config_reg.gds", "dir::../../gds/audiodac.gds", "dir::../../gds/tempsense.gds"],
     "FP_PDN_CHECK_NODES": 0,
     "SYNTH_ELABORATE_ONLY": 1,
     "PL_RANDOM_GLB_PLACEMENT": 1,
