Update design, runs now through

--- a/openlane/user_project_wrapper/config.json
+++ b/openlane/user_project_wrapper/config.json
@@ -8,7 +8,7 @@
     "MACRO_PLACEMENT_CFG": "dir::macro.cfg",
     "VERILOG_FILES_BLACKBOX": ["dir::../../verilog/rtl/defines.v", "dir::../../verilog/rtl/config_reg.v", "dir::../../verilog/rtl/audiodac.v", "dir::../../verilog/rtl/tempsense.v"],
     "EXTRA_LEFS": ["dir::../../lef/config_reg.lef", "dir::../../lef/audiodac.lef", "dir::../../lef/tempsense.lef"],
-    "EXTRA_GDS_FILES": ["dir::../../gds/user_proj_example.gds", "dir::../../gds/config_reg.gds", "dir::../../gds/audiodac.gds", "dir::../../gds/tempsense.gds"],
+    "EXTRA_GDS_FILES": ["dir::../../gds/config_reg.gds", "dir::../../gds/audiodac.gds", "dir::../../gds/tempsense.gds"],
     "FP_PDN_CHECK_NODES": 0,
     "SYNTH_ELABORATE_ONLY": 1,
     "PL_RANDOM_GLB_PLACEMENT": 1,
@@ -27,6 +27,7 @@
     "MAGIC_ZEROIZE_ORIGIN": 0,
     "FP_SIZING": "absolute",
     "RUN_CVC": 0,
+    "ROUTING_CORES": 4,
     "UNIT": "2.4",
     "FP_IO_VEXTEND": "expr::2 * $UNIT",
     "FP_IO_HEXTEND": "expr::2 * $UNIT",
