--- a/openlane/user_project_wrapper/config.json
+++ b/openlane/user_project_wrapper/config.json
@@ -4,7 +4,8 @@
     "CLOCK_PERIOD": 50,
     "CLOCK_PORT": "io_in[6]",
     "CLOCK_NET": "cfg_reg0.clk_i temp0.clk adac0.clk_i",
-    "FP_PDN_MACRO_HOOKS": ["cfg_reg0 vccd1 vssd1 vccd1", "temp0 vccd1 vssd1 vccd1", "adac0 vccd1 vssd1 vccd1"],
+    "RSZ_DONT_TOUCH_RX": ["analog"],
+    "FP_PDN_MACRO_HOOKS": ["cfg_reg0 vccd1 vssd1, temp0 vccd1 vssd1, adac0 vccd1 vssd1"],
     "MACRO_PLACEMENT_CFG": "dir::macro.cfg",
     "VERILOG_FILES_BLACKBOX": ["dir::../../verilog/rtl/defines.v", "dir::../../verilog/rtl/config_reg.v", "dir::../../verilog/rtl/audiodac.v", "dir::../../verilog/rtl/tempsense.v"],
     "EXTRA_LEFS": ["dir::../../lef/config_reg.lef", "dir::../../lef/audiodac.lef", "dir::../../lef/tempsense.lef"],
