--- a/openlane/user_project_wrapper/config.json
+++ b/openlane/user_project_wrapper/config.json
@@ -29,6 +29,7 @@
     "FP_SIZING": "absolute",
     "RUN_CVC": 0,
     "ROUTING_CORES": 4,
+    "MAGIC_EXT_USE_GDS": 1,
     "UNIT": "2.4",
     "FP_IO_VEXTEND": "expr::2 * $UNIT",
     "FP_IO_HEXTEND": "expr::2 * $UNIT",
