--- a/openlane/user_project_wrapper/config.json
+++ b/openlane/user_project_wrapper/config.json
@@ -5,7 +5,7 @@
     "CLOCK_PORT": "io_in[6]",
     "CLOCK_NET": "cfg_reg0.clk_i temp0.clk adac0.clk_i",
     "RSZ_DONT_TOUCH_RX": ["analog"],
-    "FP_PDN_MACRO_HOOKS": ["cfg_reg0 vccd1 vssd1, temp0 vccd1 vssd1, adac0 vccd1 vssd1"],
+    "FP_PDN_MACRO_HOOKS": ["cfg_reg0 vccd1 vssd1", "temp0 vccd1 vssd1", "adac0 vccd1 vssd1"],
     "MACRO_PLACEMENT_CFG": "dir::macro.cfg",
     "VERILOG_FILES_BLACKBOX": ["dir::../../verilog/rtl/defines.v", "dir::../../verilog/rtl/config_reg.v", "dir::../../verilog/rtl/audiodac.v", "dir::../../verilog/rtl/tempsense.v"],
     "EXTRA_LEFS": ["dir::../../lef/config_reg.lef", "dir::../../lef/audiodac.lef", "dir::../../lef/tempsense.lef"],
@@ -28,7 +28,7 @@
     "MAGIC_ZEROIZE_ORIGIN": 0,
     "FP_SIZING": "absolute",
     "RUN_CVC": 0,
-    "ROUTING_CORES": 4,
+    "ROUTING_CORES": 8,
     "MAGIC_EXT_USE_GDS": 1,
     "UNIT": "2.4",
     "FP_IO_VEXTEND": "expr::2 * $UNIT",
