--- a/openlane/config_reg/pin_order.cfg
+++ b/openlane/config_reg/pin_order.cfg
@@ -6,13 +6,22 @@ clk_i
 reg_wr_i
 reg_adr_i.*
 reg_dat_i.*
+mux_adr_i.*
 
 #W
 reg0_o.*
+reg1_o.*
 
 #N
-reg1_.*
-reg2_o.*
+mux0_i.*
+mux1_i.*
+mux2_i.*
+mux3_i.*
+mux4_i.*
+mux5_i.*
+mux6_i.*
+mux7_i.*
 
 #E
 reg3_o.*
+reg4_o.*
