--- a/openlane/config_reg/pin_order.cfg
+++ b/openlane/config_reg/pin_order.cfg
@@ -7,6 +7,7 @@ reg_wr_i
 reg_adr_i.*
 reg_dat_i.*
 mux_adr_i.*
+mux_o.*
 
 #W
 reg0_o.*
@@ -23,5 +24,5 @@ mux6_i.*
 mux7_i.*
 
 #E
+reg2_o.*
 reg3_o.*
-reg4_o.*
