Remove LVS on GDS

--- a/openlane/user_project_wrapper/config.json
+++ b/openlane/user_project_wrapper/config.json
@@ -3,7 +3,7 @@
     "VERILOG_FILES": ["dir::../../verilog/rtl/defines.v", "dir::../../verilog/rtl/user_project_wrapper.v"],
     "CLOCK_PERIOD": 50,
     "CLOCK_PORT": "io_in[6]",
-    "CLOCK_NET": "cfg_reg0.clk_i temp0.clk adac0.clk_i",
+    "CLOCK_NET": ["cfg_reg0.clk_i", "temp0.clk", "adac0.clk_i"],
     "RSZ_DONT_TOUCH_RX": ["analog"],
     "FP_PDN_MACRO_HOOKS": ["cfg_reg0 vccd1 vssd1", "temp0 vccd1 vssd1", "adac0 vccd1 vssd1"],
     "MACRO_PLACEMENT_CFG": "dir::macro.cfg",
@@ -29,7 +29,6 @@
     "FP_SIZING": "absolute",
     "RUN_CVC": 0,
     "ROUTING_CORES": 8,
-    "MAGIC_EXT_USE_GDS": 1,
     "UNIT": "2.4",
     "FP_IO_VEXTEND": "expr::2 * $UNIT",
     "FP_IO_HEXTEND": "expr::2 * $UNIT",
