--- a/openlane/config_reg_mux/config.json
+++ b/openlane/config_reg_mux/config.json
@@ -1,11 +1,12 @@
 {
-    "DESIGN_NAME": "config_reg",
+    "DESIGN_NAME": "config_reg_mux",
     "DESIGN_IS_CORE": 0,
-    "VERILOG_FILES": ["dir::../../verilog/rtl/defines.v", "dir::../../verilog/rtl/config_reg.v"],
+    "VERILOG_FILES": ["dir::../../verilog/rtl/defines.v", "dir::../../verilog/rtl/config_reg_mux.v"],
     "CLOCK_PERIOD": 50,
     "CLOCK_PORT": "clk_i",
     "CLOCK_NET": "clk_i",
-    "FP_SIZING": "relative",
+    "FP_SIZING": "absolute",
+    "DIE_AREA": "0 0 300 300",
     "ROUTING_CORES": 8,
     "FP_PIN_ORDER_CFG": "dir::pin_order.cfg",
     "PL_BASIC_PLACEMENT": 0,
