--- a/openlane/config_reg_mux/pin_order.cfg
+++ b/openlane/config_reg_mux/pin_order.cfg
@@ -8,10 +8,15 @@ reg_adr_i.*
 reg_dat_i.*
 mux_adr_i.*
 mux_o.*
+temp_sel_i.*
+temp_dac_o.*
+temp_ticks_o.*
 
 #W
 reg0_o.*
 reg1_o.*
+reg2_o.*
+reg3_o.*
 
 #N
 mux0_i.*
@@ -24,5 +29,11 @@ mux6_i.*
 mux7_i.*
 
 #E
-reg2_o.*
-reg3_o.*
+temp0_dac_i.*
+temp1_dac_i.*
+temp2_dac_i.*
+temp3_dac_i.*
+temp0_ticks_i.*
+temp1_ticks_i.*
+temp2_ticks_i.*
+temp3_ticks_i.*
