--- a/openlane/user_project_wrapper/config.json
+++ b/openlane/user_project_wrapper/config.json
@@ -7,9 +7,9 @@
     "RSZ_DONT_TOUCH_RX": ["analog"],
     "FP_PDN_MACRO_HOOKS": ["cfg_reg0 vccd1 vssd1", "temp0 vccd1 vssd1", "adac0 vccd1 vssd1"],
     "MACRO_PLACEMENT_CFG": "dir::macro.cfg",
-    "VERILOG_FILES_BLACKBOX": ["dir::../../verilog/rtl/defines.v", "dir::../../verilog/rtl/config_reg.v", "dir::../../verilog/rtl/audiodac.v", "dir::../../verilog/rtl/tempsense.v"],
-    "EXTRA_LEFS": ["dir::../../lef/config_reg.lef", "dir::../../lef/audiodac.lef", "dir::../../lef/tempsense.lef"],
-    "EXTRA_GDS_FILES": ["dir::../../gds/config_reg.gds", "dir::../../gds/audiodac.gds", "dir::../../gds/tempsense.gds"],
+    "VERILOG_FILES_BLACKBOX": ["dir::../../verilog/rtl/defines.v", "dir::../../verilog/rtl/config_reg_mux.v", "dir::../../verilog/rtl/audiodac.v", "dir::../../verilog/rtl/tempsense.v"],
+    "EXTRA_LEFS": ["dir::../../lef/config_reg_mux.lef", "dir::../../lef/audiodac.lef", "dir::../../lef/tempsense.lef"],
+    "EXTRA_GDS_FILES": ["dir::../../gds/config_reg_mux.gds", "dir::../../gds/audiodac.gds", "dir::../../gds/tempsense.gds"],
     "FP_PDN_CHECK_NODES": 0,
     "SYNTH_ELABORATE_ONLY": 1,
     "PL_RANDOM_GLB_PLACEMENT": 1,
