--- a/openlane/tempsense/config.json
+++ b/openlane/tempsense/config.json
@@ -8,7 +8,8 @@
     "CLOCK_PORT": "clk",
     "CLOCK_NET": "clk",
     "CLOCK_TREE_SYNTH": 1,
-    "FP_SIZING": "relative",
+    "FP_SIZING": "absolute",
+    "DIE_AREA": "0 0 150 150", 
     "ROUTING_CORES": 8,
     "FP_PDN_CORE_RING": 0,
     "FP_PIN_ORDER_CFG": "dir::pin_order.cfg",
