--- a/openlane/user_project_wrapper/macro.cfg
+++ b/openlane/user_project_wrapper/macro.cfg
@@ -1,6 +1,7 @@
-cfg_reg0	1000 1000 N
-temp0 		 100  100 N
-temp1 		2670  100 N
-temp2 		 100 3270 N
-temp3 		2670 3270 N
-adac0 		1000 2000 N
+cfg_reg0	1310  150 N
+temp0 		 200  150 N
+temp1 		2570  150 N
+temp2 		 200 3170 N
+temp3 		2570 3170 N
+adac0 		2000 1500 N
+adc0          50 1560 FN
