Change clock and reset of config regs and mux, change IO setting from MGMT to USER, extend block descriptions in README

--- a/openlane/config_reg_mux/config.json
+++ b/openlane/config_reg_mux/config.json
@@ -3,8 +3,8 @@
     "DESIGN_IS_CORE": 0,
     "VERILOG_FILES": ["dir::../../verilog/rtl/defines.v", "dir::../../verilog/rtl/config_reg_mux.v"],
     "CLOCK_PERIOD": 50,
-    "CLOCK_PORT": "clk_i",
-    "CLOCK_NET": "clk_i",
+    "CLOCK_PORT": "reg_wr_i",
+    "CLOCK_NET": "reg_wr_i",
     "FP_SIZING": "absolute",
     "DIE_AREA": "0 0 300 300",
     "ROUTING_CORES": 8,
