--- a/openlane/user_project_wrapper/config.json
+++ b/openlane/user_project_wrapper/config.json
@@ -6,7 +6,7 @@
     "CLOCK_PORT": "io_in[6]",
     "CLOCK_NET": ["cfg_reg0.reg_wr_i", "temp0.clk", "temp1.clk", "temp2.clk", "temp3.clk", "adac0.clk_i", "adc0.clk_vcm"],
     "RSZ_DONT_TOUCH_RX": ["analog"],
-    "FP_PDN_MACRO_HOOKS": ["cfg_reg0 vccd1 vssd1 vccd1 vssd1, temp0 vccd1 vssd1 vccd1 vssd1, temp1 vccd1 vssd1 vccd1 vssd1, temp2 vccd1 vssd1 vccd1 vssd1, temp3 vccd1 vssd1 vccd1 vssd1, adac0 vccd1 vssd1 vccd1 vssd1, adc0 vccd2 vssd2 vccd2 vssd2"],
+    "FP_PDN_MACRO_HOOKS": ["cfg_reg0 vccd1 vssd1 vccd1 vssd1, temp0 vccd1 vssd1 vccd1 vssd1, temp1 vccd1 vssd1 vccd1 vssd1, temp2 vccd1 vssd1 vccd1 vssd1, temp3 vccd1 vssd1 vccd1 vssd1, adac0 vccd1 vssd1 vccd1 vssd1, adc0 vccd2 vssd2 VDD VSS"],
     "MACRO_PLACEMENT_CFG": "dir::macro.cfg",
     "VERILOG_FILES_BLACKBOX": ["dir::../../verilog/rtl/defines.v", "dir::../../verilog/rtl/config_reg_mux.v", "dir::../../verilog/rtl/audiodac.v", "dir::../../verilog/rtl/tempsense.v", "dir::../../macro/adc_top.v"],
     "EXTRA_LEFS": ["dir::../../lef/config_reg_mux.lef", "dir::../../lef/audiodac.lef", "dir::../../lef/tempsense.lef", "dir::../../macro/adc_top.lef"],
