--- a/openlane/user_project_wrapper/macro.cfg
+++ b/openlane/user_project_wrapper/macro.cfg
@@ -1,7 +1,8 @@
 cfg_reg0	1310  150 N
+const_gen0	1310  750 N
 temp0 		 200  150 N
 temp1 		2570  150 N
 temp2 		 200 3170 N
 temp3 		2570 3170 N
-adac0 		2000 1500 N
-adc0          50 1560 FN
+dac0 		2000 1500 N
+adc0              50 1560 FN
