--- a/openlane/user_project_wrapper/config.json
+++ b/openlane/user_project_wrapper/config.json
@@ -1,16 +1,50 @@
 {
     "DESIGN_IS_CORE": 1,
     "DESIGN_NAME": "user_project_wrapper",
-    "VERILOG_FILES": ["dir::../../verilog/rtl/defines.v", "dir::../../verilog/rtl/user_project_wrapper.v"],
+    "VERILOG_FILES": [
+        "dir::../../verilog/rtl/defines.v", 
+        "dir::../../verilog/rtl/user_project_wrapper.v" ],
     "CLOCK_PERIOD": 50,
     "CLOCK_PORT": "io_in[6]",
-    "CLOCK_NET": ["cfg_reg0.reg_wr_i", "temp0.clk", "temp1.clk", "temp2.clk", "temp3.clk", "adac0.clk_i", "adc0.clk_vcm"],
+    "CLOCK_NET": [
+        "clk_w",
+        "cfg_reg0.reg_wr_i", 
+        "temp0.clk", 
+        "temp1.clk", 
+        "temp2.clk", 
+        "temp3.clk", 
+        "dac0.clk_i", 
+        "adc0.clk_vcm" ],
     "RSZ_DONT_TOUCH_RX": ["analog"],
-    "FP_PDN_MACRO_HOOKS": ["cfg_reg0 vccd1 vssd1 vccd1 vssd1, temp0 vccd1 vssd1 vccd1 vssd1, temp1 vccd1 vssd1 vccd1 vssd1, temp2 vccd1 vssd1 vccd1 vssd1, temp3 vccd1 vssd1 vccd1 vssd1, adac0 vccd1 vssd1 vccd1 vssd1, adc0 vccd2 vssd2 VDD VSS"],
+    "FP_PDN_MACRO_HOOKS": [
+        "cfg_reg0 vccd1 vssd1 vccd1 vssd1, ",
+        "temp0 vccd1 vssd1 vccd1 vssd1, ",
+        "temp1 vccd1 vssd1 vccd1 vssd1, ",
+        "temp2 vccd1 vssd1 vccd1 vssd1, ",
+        "temp3 vccd1 vssd1 vccd1 vssd1, ",
+        "dac0 vccd1 vssd1 vccd1 vssd1, ",
+        "adc0 vccd2 vssd2 VDD VSS, ",
+        "const_gen0 vccd1 vssd1 vccd1 vssd1" ],
     "MACRO_PLACEMENT_CFG": "dir::macro.cfg",
-    "VERILOG_FILES_BLACKBOX": ["dir::../../verilog/rtl/defines.v", "dir::../../verilog/rtl/config_reg_mux.v", "dir::../../verilog/rtl/audiodac.v", "dir::../../verilog/rtl/tempsense.v", "dir::../../macro/adc_top.v"],
-    "EXTRA_LEFS": ["dir::../../lef/config_reg_mux.lef", "dir::../../lef/audiodac.lef", "dir::../../lef/tempsense.lef", "dir::../../macro/adc_top.lef"],
-    "EXTRA_GDS_FILES": ["dir::../../gds/config_reg_mux.gds", "dir::../../gds/audiodac.gds", "dir::../../gds/tempsense.gds", "dir::../../macro/adc_top.gds"],
+    "VERILOG_FILES_BLACKBOX": [
+        "dir::../../verilog/rtl/defines.v", 
+        "dir::../../verilog/rtl/config_reg_mux.v", 
+        "dir::../../verilog/rtl/const_gen.v", 
+        "dir::../../verilog/rtl/audiodac.v", 
+        "dir::../../verilog/rtl/tempsense.v", 
+        "dir::../../macro/adc_top.v" ],
+    "EXTRA_LEFS": [
+        "dir::../../lef/config_reg_mux.lef", 
+        "dir::../../lef/const_gen.lef", 
+        "dir::../../lef/audiodac.lef", 
+        "dir::../../lef/tempsense.lef", 
+        "dir::../../macro/adc_top.lef" ],
+    "EXTRA_GDS_FILES": [
+        "dir::../../gds/config_reg_mux.gds", 
+        "dir::../../gds/const_gen.gds", 
+        "dir::../../gds/audiodac.gds", 
+        "dir::../../gds/tempsense.gds", 
+        "dir::../../macro/adc_top.gds" ],
     "FP_PDN_CHECK_NODES": 0,
     "SYNTH_ELABORATE_ONLY": 1,
     "PL_RANDOM_GLB_PLACEMENT": 1,
