--- a/openlane/const_gen/config.json
+++ b/openlane/const_gen/config.json
@@ -3,15 +3,13 @@
     "DESIGN_IS_CORE": 0,
     "VERILOG_FILES": "dir::../../verilog/rtl/const_gen.v",
     "CLOCK_PORT": null,
-    "CLOCK_TREE_SYNTH": false,
+    "RUN_CTS": false,
     "FP_SIZING": "absolute",
     "DIE_AREA": "0 0 300 300",
-    "ROUTING_CORES": 8,
-    "PL_BASIC_PLACEMENT": 0,
-    "PL_TARGET_DENSITY": 0.20,
+    "DRT_THREADS": 8,
+    "PL_TARGET_DENSITY_PCT": 20,
     "VDD_NETS": ["vccd1"],
     "GND_NETS": ["vssd1"],
-    "DIODE_INSERTION_STRATEGY": 4,
     "RUN_CVC": 1,
     "pdk::sky130*": {
         "FP_CORE_UTIL": 10,
