--- a/openlane/audiodac/config.json
+++ b/openlane/audiodac/config.json
@@ -6,13 +6,11 @@
     "CLOCK_PORT": "clk_i",
     "CLOCK_NET": "clk_i",
     "FP_SIZING": "relative",
-    "ROUTING_CORES": 8,
+    "DRT_THREADS": 8,
     "FP_PIN_ORDER_CFG": "dir::pin_order.cfg",
-    "PL_BASIC_PLACEMENT": 0,
-    "PL_TARGET_DENSITY": 0.30,
+    "PL_TARGET_DENSITY_PCT": 30,
     "VDD_NETS": ["vccd1"],
     "GND_NETS": ["vssd1"],
-    "DIODE_INSERTION_STRATEGY": 4,
     "RUN_CVC": 1,
     "pdk::sky130*": {
         "FP_CORE_UTIL": 25,
