--- a/openlane/config_reg_mux/config.json
+++ b/openlane/config_reg_mux/config.json
@@ -7,13 +7,11 @@
     "CLOCK_NET": "reg_wr_i",
     "FP_SIZING": "absolute",
     "DIE_AREA": "0 0 300 300",
-    "ROUTING_CORES": 8,
+    "DRT_THREADS": 8,
     "FP_PIN_ORDER_CFG": "dir::pin_order.cfg",
-    "PL_BASIC_PLACEMENT": 0,
-    "PL_TARGET_DENSITY": 0.20,
+    "PL_TARGET_DENSITY_PCT": 20,
     "VDD_NETS": ["vccd1"],
     "GND_NETS": ["vssd1"],
-    "DIODE_INSERTION_STRATEGY": 4,
     "RUN_CVC": 1,
     "pdk::sky130*": {
         "FP_CORE_UTIL": 10,
