--- a/openlane/tempsense/config.json
+++ b/openlane/tempsense/config.json
@@ -1,31 +1,30 @@
 {
     "DESIGN_NAME": "tempsense",
     "DESIGN_IS_CORE": 0,
-    "VERILOG_FILES": ["dir::../../verilog/rtl/defines.v", "dir::../../verilog/rtl/tempsense.v", "dir::../../verilog/rtl/tempsense_vdac.v", "dir::../../verilog/rtl/tempsense_vdac_cell.v", "dir::../../verilog/rtl/tempsense_sar_ctrl.v"],
+    "VERILOG_FILES": ["dir::../../verilog/rtl/defines.v", "dir::../../verilog/rtl/tempsense.v", "dir::../../verilog/rtl/tempsense_vdac.v", "dir::../../verilog/rtl/tempsense_vdac_cell.v", "dir::../../verilog/rtl/tempsense_sar_ctrl.v", "/foss/pdks/sky130B/libs.ref/sky130_fd_sc_hd/verilog/sky130_fd_sc_hd.v"],
     "SYNTH_READ_BLACKBOX_LIB": 1,
+    "QUIT_ON_SYNTH_CHECKS": false,
     "RSZ_DONT_TOUCH_RX": "analog",
     "CLOCK_PERIOD": 50,
     "CLOCK_PORT": "clk",
     "CLOCK_NET": "clk",
-    "CLOCK_TREE_SYNTH": 1,
+    "RUN_CTS": true,
     "FP_SIZING": "absolute",
     "DIE_AREA": "0 0 150 150", 
-    "ROUTING_CORES": 8,
+    "DRT_THREADS": 8,
     "FP_PDN_CORE_RING": 0,
     "FP_PIN_ORDER_CFG": "dir::pin_order.cfg",
     "FP_PDN_HOFFSET": 12,
     "FP_PDN_VOFFSET": 12,
     "FP_PDN_HPITCH": 12,
     "FP_PDN_VPITCH": 24,
-    "PL_BASIC_PLACEMENT": 0,
-    "PL_TARGET_DENSITY": 0.30,
-    "PL_RESIZER_TIMING_OPTIMIZATIONS": 0,
-    "PL_RESIZER_DESIGN_OPTIMIZATIONS": 1,
+    "PL_TARGET_DENSITY_PCT": 30,
+    "RUN_POST_CTS_RESIZER_TIMING": false,
+    "RUN_REPAIR_DESIGN": true,
     "DPL_CELL_PADDING": 2,
-    "GLB_RESIZER_TIMING_OPTIMIZATIONS": 0,
+    "RUN_POST_GRT_RESIZER_TIMING": false,
     "VDD_NETS": ["vccd1"],
     "GND_NETS": ["vssd1"],
-    "DIODE_INSERTION_STRATEGY": 4,
     "RUN_CVC": 1,
     "pdk::sky130*": {
         "FP_CORE_UTIL": 25,
