--- a/openlane/user_project_wrapper/config.json
+++ b/openlane/user_project_wrapper/config.json
@@ -15,8 +15,8 @@
         "temp3.clk", 
         "dac0.clk_i", 
         "adc0.clk_vcm" ],
-    "RSZ_DONT_TOUCH_RX": ["analog"],
-    "FP_PDN_MACRO_HOOKS": [
+    "RSZ_DONT_TOUCH_RX": "analog",
+    "PDN_MACRO_CONNECTIONS": [
         "cfg_reg0 vccd1 vssd1 vccd1 vssd1, ",
         "temp0 vccd1 vssd1 vccd1 vssd1, ",
         "temp1 vccd1 vssd1 vccd1 vssd1, ",
@@ -26,12 +26,12 @@
         "adc0 vccd2 vssd2 VDD VSS, ",
         "const_gen0 vccd1 vssd1 vccd1 vssd1" ],
     "MACRO_PLACEMENT_CFG": "dir::macro.cfg",
-    "VERILOG_FILES_BLACKBOX": [
+    "EXTRA_VERILOG_MODELS": [
         "dir::../../verilog/rtl/defines.v", 
-        "dir::../../verilog/rtl/config_reg_mux.v", 
-        "dir::../../verilog/rtl/const_gen.v", 
-        "dir::../../verilog/rtl/audiodac.v", 
-        "dir::../../verilog/rtl/tempsense.v", 
+        "dir::../../verilog/gl/config_reg_mux.v", 
+        "dir::../../verilog/gl/const_gen.v", 
+        "dir::../../verilog/gl/audiodac.v", 
+        "dir::../../verilog/gl/tempsense.v", 
         "dir::../../macro/adc_top.v" ],
     "EXTRA_LEFS": [
         "dir::../../lef/config_reg_mux.lef", 
@@ -47,28 +47,25 @@
         "dir::../../macro/adc_top.gds" ],
     "FP_PDN_CHECK_NODES": 0,
     "SYNTH_ELABORATE_ONLY": 1,
-    "PL_RANDOM_GLB_PLACEMENT": 1,
-    "PL_RESIZER_DESIGN_OPTIMIZATIONS": 0,
-    "PL_RESIZER_TIMING_OPTIMIZATIONS": 0,
-    "PL_RESIZER_BUFFER_INPUT_PORTS": 0,
+    "RUN_REPAIR_DESIGN": 0,
+    "RUN_POST_CTS_RESIZER_TIMING": 0,
+    "DESIGN_REPAIR_BUFFER_INPUT_PORTS": 0,
     "FP_PDN_ENABLE_RAILS": 0,
-    "DIODE_INSERTION_STRATEGY": 0,
     "RUN_FILL_INSERTION": 0,
-    "RUN_TAP_DECAP_INSERTION": 0,
+    "RUN_TAP_ENDCAP_INSERTION": 0,
     "FP_PDN_VPITCH": 180,
     "FP_PDN_HPITCH": 180,
-    "CLOCK_TREE_SYNTH": 0,
+    "RUN_CTS": 0,
     "FP_PDN_VOFFSET": 5,
     "FP_PDN_HOFFSET": 5,
     "MAGIC_ZEROIZE_ORIGIN": 0,
     "FP_SIZING": "absolute",
     "RUN_CVC": 0,
-    "ROUTING_CORES": 8,
-    "UNIT": "2.4",
-    "FP_IO_VEXTEND": "expr::2 * $UNIT",
-    "FP_IO_HEXTEND": "expr::2 * $UNIT",
-    "FP_IO_VLENGTH": "ref::$UNIT",
-    "FP_IO_HLENGTH": "ref::$UNIT",
+    "DRT_THREADS": 8,
+    "FP_IO_VEXTEND": "expr::(2 * 2.4)",
+    "FP_IO_HEXTEND": "expr::(2 * 2.4)",
+    "FP_IO_VLENGTH": 2.4,
+    "FP_IO_HLENGTH": 2.4,
     "FP_IO_VTHICKNESS_MULT": 4,
     "FP_IO_HTHICKNESS_MULT": 4,
     "FP_PDN_CORE_RING": 1,
@@ -84,7 +81,7 @@
     "FP_PDN_HSPACING": "expr::(5 * $FP_PDN_CORE_RING_HWIDTH)",
     "VDD_NETS": ["vccd1 vccd2 vdda1 vdda2"],
     "GND_NETS": ["vssd1 vssd2 vssa1 vssa2"],
-    "SYNTH_USE_PG_PINS_DEFINES": "USE_POWER_PINS",
+    "SYNTH_POWER_DEFINE": "USE_POWER_PINS",
     "pdk::sky130*": {
         "RT_MAX_LAYER": "met4",
         "DIE_AREA": "0 0 2920 3520",
